<resources>
    <string name="app_name">FitHits</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_mymusic">MyMusic</string>
    <string name="title_Stopwatch">Stopwatch</string>
    <string name="title_Steps">Steps</string>
    <string name="title_Online">Online</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_profile">MyProfile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_languages">Languages</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_updates">Check for Updates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
