<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_languages"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_languages" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/menu_rate_us" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/menu_feedback" />
        </menu>
    </item>
    <item android:title="Updates">
        <menu>
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/ic_update_black_24dp"
                android:title="@string/menu_updates" />
        </menu>
    </item>

</menu>
